--- a/dev/design_type_testing.ipynb
+++ b/dev/design_type_testing.ipynb
@@ -30,7 +30,7 @@
     "import darc\n",
     "from darc.delayed import models\n",
     "from darc.designs import DARCDesign\n",
-    "from darc.delayed.designs import Griskevicius2011delay, Frye, Koffarnus_Bickel, Kirby2009\n",
+    "from darc.delayed.designs import Griskevicius2011, Frye, Koffarnus_Bickel, Kirby2009\n",
     "\n",
     "from darc.data_plotting import plot_delay_without_front_end_delays\n",
     "from darc_parameter_recovery import simulated_experiment_trial_loop\n",
@@ -94,7 +94,7 @@
     "                         DB=list(np.arange(1, 365, 7)))\n",
     "\n",
     "design_types = [Kirby2009, \n",
-    "                Griskevicius2011delay, \n",
+    "                Griskevicius2011, \n",
     "                Koffarnus_Bickel, \n",
     "                Frye,\n",
     "                BAD]\n",
