combined two figures together for the paper

--- a/dev/old/hyperbolic_discounting_parameter_sweeps.ipynb
+++ b/dev/old/hyperbolic_discounting_parameter_sweeps.ipynb
@@ -33,7 +33,7 @@
     "import darc\n",
     "from darc.delayed import models\n",
     "from darc.designs import DARCDesign\n",
-    "from darc.delayed.designs import Kirby2009, Frye, Griskevicius2011delay, Koffarnus_Bickel\n",
+    "from darc.delayed.designs import Kirby2009, Frye, Griskevicius2011, Koffarnus_Bickel\n",
     "from dev.darc_parameter_recovery import parameter_recovery_sweep"
    ]
   },
