#56 adding comments in the notebook

--- a/dev/test model misspecification.ipynb
+++ b/dev/test model misspecification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,38 +36,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib import gridspec\n",
-    "%matplotlib inline\n",
-    "%config InlineBackend.figure_format = 'retina'"
+    "Test where we just have one model. This will use the model for both response generation (with it's true parameter values) and fit that same model."
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/btvincent/git-local/darc-experiments-python/bad/optimisation.py:153: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  (n_times_sampled+n_times_sampled_iter))\n",
-      "/Users/btvincent/git-local/darc-experiments-python/bad/optimisation.py:226: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  (n_times_sampled + n_times_sampled_iter))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "design_thing = DARCDesign(max_trials=20, \n",
     "                          RA=list(np.arange(5, 99+1, 1)), \n",
@@ -99,28 +78,17 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This example with generate data from the `Hyperbolic` model, but do parameter estimation on the `Exponential` model throughout the simulated experiment."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/btvincent/git-local/darc-experiments-python/darc/delayed/models.py:129: RuntimeWarning: overflow encountered in multiply\n",
-      "  VB = data['RB'].values * self._time_discount_func(data['DB'].values, θ)\n",
-      "/Users/btvincent/git-local/darc-experiments-python/bad/choice_functions.py:22: RuntimeWarning: overflow encountered in true_divide\n",
-      "  p_chose_B = θ_fixed['ϵ'] + (1 - 2 * θ_fixed['ϵ']) * _Phi(np.divide(decision_variable, α))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "design_thing = DARCDesign(max_trials=20, \n",
     "                          RA=list(np.arange(5, 99+1, 1)), \n",
@@ -141,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -177,13 +145,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-40.169892</td>\n",
-       "      <td>0.004871</td>\n",
-       "      <td>0.004871</td>\n",
-       "      <td>0.004871</td>\n",
-       "      <td>0.004871</td>\n",
-       "      <td>0.004871</td>\n",
-       "      <td>0.004871</td>\n",
+       "      <td>-5.708253</td>\n",
+       "      <td>0.007371</td>\n",
+       "      <td>0.007008</td>\n",
+       "      <td>0.007188</td>\n",
+       "      <td>0.007371</td>\n",
+       "      <td>0.004933</td>\n",
+       "      <td>0.007371</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -191,10 +159,10 @@
       ],
       "text/plain": [
        "   k_entropy  k_median    k_mean  k_lower50  k_upper50  k_lower95  k_upper95\n",
-       "0 -40.169892  0.004871  0.004871   0.004871   0.004871   0.004871   0.004871"
+       "0  -5.708253  0.007371  0.007008   0.007188   0.007371   0.004933   0.007371"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
