--- a/dev/old/design_type_testing.ipynb
+++ b/dev/old/design_type_testing.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "import darc\n",
     "from darc.delayed import models\n",
-    "from darc.designs import DARCDesign\n",
+    "from darc.designs import BADDesignGenerator\n",
     "from darc.delayed.designs import Griskevicius2011, Frye, Koffarnus_Bickel, Kirby2009\n",
     "\n",
     "from darc.data_plotting import plot_delay_without_front_end_delays\n",
@@ -89,7 +89,7 @@
     "\n",
     "col_titles = ['major depressive disorder', 'upper income adult', 'anorexia nervosa']\n",
     "\n",
-    "BAD = lambda: DARCDesign(max_trials=20, \n",
+    "BAD = lambda: BADDesignGenerator(max_trials=20, \n",
     "                         RA=list(np.arange(5, 99+1, 1)), \n",
     "                         DB=list(np.arange(1, 365, 7)))\n",
     "\n",
