--- a/dev/role of the prior.ipynb
+++ b/dev/role of the prior.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "import darc\n",
     "from darc.delayed import models\n",
-    "from darc.designs import DARCDesign\n",
+    "from darc.designs import BADDesignGenerator\n",
     "from darc_parameter_recovery import parameter_recovery_sweep\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -74,7 +74,7 @@
    "source": [
     "target_param_name = 'logk'\n",
     "max_trials = 16\n",
-    "design_thing = DARCDesign(max_trials=max_trials,\n",
+    "design_thing = BADDesignGenerator(max_trials=max_trials,\n",
     "                          RA=list(np.arange(5, 99+1, 1)))\n",
     "model = models.Hyperbolic(n_particles=5000)\n",
     "θ_final, θ_all = parameter_recovery_sweep(θsweep, model, design_thing, target_param_name)"
