--- a/dev/DelaySlice testing.ipynb
+++ b/dev/DelaySlice testing.ipynb
@@ -107,7 +107,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(9,4))\n",
-    "plot_delay_without_front_end_delays(ax, design_thing.all_data)\n",
+    "plot_delay_without_front_end_delays(ax, design_thing.get_df())\n",
     "ax.set_xlim([0, 365])\n",
     "ax.set_ylim([0, 1])"
    ]
@@ -200,7 +200,7 @@
     "ax[0].plot(x, y, lw=4, label='posterior median')\n",
     "\n",
     "# overlay the data onto this plot\n",
-    "plot_data(ax[0], design_thing.all_data)\n",
+    "plot_data(ax[0], design_thing.get_df())\n",
     "\n",
     "# formatting\n",
     "ax[0].set_ylim([0-0.05, 1+0.05])\n",
@@ -213,8 +213,8 @@
     "\n",
     "# Visualise things as a function of trial ===================================\n",
     "\n",
-    "trial = np.arange(design_thing.all_data.shape[0]) + 1\n",
-    "indiff = design_thing.all_data['RA'].values / design_thing.all_data['RB'].values\n",
+    "trial = np.arange(design_thing.get_df()shape[0]) + 1\n",
+    "indiff = design_thing.get_df()['RA'].values / design_thing.get_df()['RB'].values\n",
     "ax[1].plot(indiff, trial, '-o', ms=7, c='k', label='data')\n",
     "\n",
     "ax[1].set_ylabel('trial')\n",
