--- a/dev/old/design_type_testing.ipynb
+++ b/dev/old/design_type_testing.ipynb
@@ -147,7 +147,7 @@
     "        model = models.Hyperbolic(n_particles=5000)\n",
     "        model.θ_true = pd.DataFrame.from_dict(true_p)\n",
     "        fitted_model, _ = simulated_experiment_trial_loop(design_thing, model)\n",
-    "        plot_delay_without_front_end_delays(ax[row,col], design_thing.all_data)\n",
+    "        plot_delay_without_front_end_delays(ax[row,col], design_thing.get_df())\n",
     "        hyperbolic_posterior_predictive(ax[row,col], fitted_model)\n",
     "        \n",
     "        if col > 0:\n",
