--- a/dev/test model misspecification.ipynb
+++ b/dev/test model misspecification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +44,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/btvincent/git-local/darc-experiments-python/bad/optimisation.py:153: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  (n_times_sampled+n_times_sampled_iter))\n",
+      "/Users/btvincent/git-local/darc-experiments-python/bad/optimisation.py:226: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  (n_times_sampled + n_times_sampled_iter))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>logk_entropy</th>\n",
+       "      <th>logk_median</th>\n",
+       "      <th>logk_mean</th>\n",
+       "      <th>logk_lower50</th>\n",
+       "      <th>logk_upper50</th>\n",
+       "      <th>logk_lower95</th>\n",
+       "      <th>logk_upper95</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.445501</td>\n",
+       "      <td>-4.629497</td>\n",
+       "      <td>-4.628961</td>\n",
+       "      <td>-4.66281</td>\n",
+       "      <td>-4.59145</td>\n",
+       "      <td>-4.755049</td>\n",
+       "      <td>-4.53165</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   logk_entropy  logk_median  logk_mean  logk_lower50  logk_upper50  \\\n",
+       "0     -1.445501    -4.629497  -4.628961      -4.66281      -4.59145   \n",
+       "\n",
+       "   logk_lower95  logk_upper95  \n",
+       "0     -4.755049      -4.53165  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "design_thing = BADDesignGenerator(max_trials=20, \n",
     "                          RA=list(np.arange(5, 99+1, 1)), \n",
@@ -58,8 +126,8 @@
     "\n",
     "fitted_model, _ = simulated_experiment_trial_loop(design_thing, model_to_fit)\n",
     "\n",
-    "\n",
-    "# plot_delay_without_front_end_delays(ax[row,col], design_thing.all_data)\n",
+    "fitted_model.get_θ_summary_stats('logk')\n",
+    "# plot_delay_without_front_end_delays(ax[row,col], design_thing.get_df())\n",
     "# hyperbolic_posterior_predictive(ax[row,col], fitted_model)"
    ]
   },
@@ -86,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +164,7 @@
     "\n",
     "# create a response model with some true parameters\n",
     "response_model = models.Hyperbolic(n_particles=5000)\n",
-    "response_model.θ_true = pd.DataFrame.from_dict({'logk': [np.log(0.01)], 'α': [2]})\n",
+    "response_model.θ_true = pd.DataFrame.from_dict({'logk': [-4.5], 'α': [2]})\n",
     "\n",
     "# we will fit with a different class of model\n",
     "model_to_fit = models.Exponential(n_particles=5000)\n",
@@ -109,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -145,13 +213,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-5.708253</td>\n",
-       "      <td>0.007371</td>\n",
-       "      <td>0.007008</td>\n",
-       "      <td>0.007188</td>\n",
-       "      <td>0.007371</td>\n",
-       "      <td>0.004933</td>\n",
-       "      <td>0.007371</td>\n",
+       "      <td>-6.026244</td>\n",
+       "      <td>0.004534</td>\n",
+       "      <td>0.004814</td>\n",
+       "      <td>0.004534</td>\n",
+       "      <td>0.004534</td>\n",
+       "      <td>0.004534</td>\n",
+       "      <td>0.006033</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -159,15 +227,16 @@
       ],
       "text/plain": [
        "   k_entropy  k_median    k_mean  k_lower50  k_upper50  k_lower95  k_upper95\n",
-       "0  -5.708253  0.007371  0.007008   0.007188   0.007371   0.004933   0.007371"
+       "0  -6.026244  0.004534  0.004814   0.004534   0.004534   0.004534   0.006033"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# NOTE THESE ARE ESIMATES OF k (NOT LOGK) FROM THE EXPONENTIAL MODEL\n",
     "fitted_model.get_θ_summary_stats('k')"
    ]
   },
