global rename all_data -> data, remove print lines, and misc

--- a/dev/DelaySlice testing.ipynb
+++ b/dev/DelaySlice testing.ipynb
@@ -125,9 +125,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_data(ax, all_data):\n",
-    "    x = all_data['RA'].values / all_data['RB'].values\n",
-    "    y = all_data['R'].values\n",
+    "def plot_data(ax, data):\n",
+    "    x = data['RA'].values / data['RB'].values\n",
+    "    y = data['R'].values\n",
     "    ax.scatter(x, y, c='k')"
    ]
   },
