#36 rename BADDesignGenerator to DARCDesignGenerator

--- a/dev/posterior entropy test.ipynb
+++ b/dev/posterior entropy test.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "import darc\n",
     "from darc.delayed import models\n",
-    "from darc.designs import BADDesignGenerator\n",
+    "from darc.designs import DARCDesignGenerator\n",
     "from darc.delayed.designs import Griskevicius2011, Frye, Koffarnus_Bickel, Kirby2009\n",
     "\n",
     "from darc.data_plotting import plot_delay_without_front_end_delays\n",
@@ -192,7 +192,7 @@
     "    \n",
     "    # our approach --------------------------------------------------------------\n",
     "    print('\\tStarting BAD')\n",
-    "    design_thing = BADDesignGenerator(max_trials=30, \n",
+    "    design_thing = DARCDesignGenerator(max_trials=30, \n",
     "                              RA=list(np.arange(5, 99+1, 1)), \n",
     "                              DB=list(np.arange(1, 365, 7)))\n",
     "    model = models.Hyperbolic(n_particles=5000)\n",
