#36 updates to design classes

--- a/dev/DelaySlice testing.ipynb
+++ b/dev/DelaySlice testing.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "import darc\n",
     "from darc.delayed import models\n",
-    "from darc.designs import DARCDesignGenerator\n",
+    "from darc.designs import BayesianAdaptiveDesignGeneratorDARC\n",
     "\n",
     "from darc.data_plotting import plot_delay_without_front_end_delays\n",
     "from darc_parameter_recovery import simulated_experiment_trial_loop\n",
@@ -79,7 +79,7 @@
    "source": [
     "max_trials = 20\n",
     "\n",
-    "design_thing = DARCDesignGenerator(max_trials=max_trials,\n",
+    "design_thing = BayesianAdaptiveDesignGeneratorDARC(max_trials=max_trials,\n",
     "                          RA=list(np.arange(0,100,1)),\n",
     "                          DB=[180])\n",
     "\n",
