--- a/dev/delayed choice demo.ipynb
+++ b/dev/delayed choice demo.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "import darc\n",
     "from darc.delayed import models\n",
-    "from darc.designs import DARCDesignGenerator\n",
+    "from darc.designs import BayesianAdaptiveDesignGeneratorDARC\n",
     "from darc.delayed.designs import Kirby2009, Frye, Griskevicius2011, Koffarnus_Bickel\n",
     "from dev.darc_parameter_recovery import parameter_recovery_sweep, simulated_experiment_trial_loop\n",
     "from darc.data_plotting import plot_delay_without_front_end_delays"
@@ -98,7 +98,7 @@
     "\n",
     "col_titles = ['major depressive disorder', 'upper income adult', 'anorexia nervosa']\n",
     "\n",
-    "BAD = lambda: DARCDesignGenerator(max_trials=20, \n",
+    "BAD = lambda: BayesianAdaptiveDesignGeneratorDARC(max_trials=20, \n",
     "                         RA=list(np.arange(5, 99+1, 1)), \n",
     "                         DB=list(np.arange(1, 365, 7)))\n",
     "\n",
@@ -316,7 +316,7 @@
     "\n",
     "# DARC -----------------------------------------------------------------\n",
     "max_trials = 20\n",
-    "design_thing = DARCDesignGenerator(max_trials=max_trials, RA=list(np.arange(5, 99+1, 1)))\n",
+    "design_thing = BayesianAdaptiveDesignGeneratorDARC(max_trials=max_trials, RA=list(np.arange(5, 99+1, 1)))\n",
     "model = models.Hyperbolic(n_particles=5000)\n",
     "θ_estimated_darc, _ = parameter_recovery_sweep(θsweep, model, design_thing, target_param_name)\n",
     "n_trials_darc = max_trials"
