--- a/dev/posterior_prediction_test.ipynb
+++ b/dev/posterior_prediction_test.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "import darc\n",
     "from darc.delayed import models\n",
-    "from darc.designs import DARCDesignGenerator\n",
+    "from darc.designs import BayesianAdaptiveDesignGeneratorDARC\n",
     "from darc.data_plotting import plot_delay_without_front_end_delays\n",
     "from darc_parameter_recovery import simulated_experiment_trial_loop"
    ]
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "design_thing = DARCDesignGenerator(max_trials=20, \n",
+    "design_thing = BayesianAdaptiveDesignGeneratorDARC(max_trials=20, \n",
     "                          RA=list(np.arange(5, 99+1, 1)), \n",
     "                          DB=list(np.arange(1, 365, 7)))"
    ]
