--- a/dev/test model misspecification.ipynb
+++ b/dev/test model misspecification.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "import darc\n",
     "from darc.delayed import models\n",
-    "from darc.designs import DARCDesignGenerator\n",
+    "from darc.designs import BayesianAdaptiveDesignGeneratorDARC\n",
     "# from darc.delayed.designs import Kirby2009, Frye, Griskevicius2011, Koffarnus_Bickel\n",
     "from dev.darc_parameter_recovery import simulated_experiment_trial_loop\n",
     "from darc.data_plotting import plot_delay_without_front_end_delays"
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "design_thing = DARCDesignGenerator(max_trials=20, \n",
+    "design_thing = BayesianAdaptiveDesignGeneratorDARC(max_trials=20, \n",
     "                          RA=list(np.arange(5, 99+1, 1)), \n",
     "                          DB=list(np.arange(1, 365, 7)))\n",
     "\n",
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "design_thing = DARCDesignGenerator(max_trials=20, \n",
+    "design_thing = BayesianAdaptiveDesignGeneratorDARC(max_trials=20, \n",
     "                          RA=list(np.arange(5, 99+1, 1)), \n",
     "                          DB=list(np.arange(1, 365, 7)))\n",
     "\n",
