--- a/dev/test model misspecification.ipynb
+++ b/dev/test model misspecification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "\n",
     "import darc\n",
     "from darc.delayed import models\n",
-    "from darc.designs import BayesianAdaptiveDesignGeneratorDARC\n",
+    "from darc.designs import BayesianAdaptiveDesignGeneratorDARC, DesignSpaceBuilder\n",
     "# from darc.delayed.designs import Kirby2009, Frye, Griskevicius2011, Koffarnus_Bickel\n",
     "from dev.darc_parameter_recovery import simulated_experiment_trial_loop\n",
     "from darc.data_plotting import plot_delay_without_front_end_delays"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -90,35 +90,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-1.445501</td>\n",
-       "      <td>-4.629497</td>\n",
-       "      <td>-4.628961</td>\n",
-       "      <td>-4.66281</td>\n",
-       "      <td>-4.59145</td>\n",
-       "      <td>-4.755049</td>\n",
-       "      <td>-4.53165</td>\n",
+       "      <td>-2.054001</td>\n",
+       "      <td>-4.634027</td>\n",
+       "      <td>-4.638929</td>\n",
+       "      <td>-4.658559</td>\n",
+       "      <td>-4.62315</td>\n",
+       "      <td>-4.707965</td>\n",
+       "      <td>-4.581752</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   logk_entropy  logk_median  logk_mean  logk_lower50  logk_upper50  \\\n",
-       "0     -1.445501    -4.629497  -4.628961      -4.66281      -4.59145   \n",
-       "\n",
-       "   logk_lower95  logk_upper95  \n",
-       "0     -4.755049      -4.53165  "
+       "   logk_entropy  logk_median  logk_mean  logk_lower50  logk_upper50  logk_lower95  logk_upper95\n",
+       "0     -2.054001    -4.634027  -4.638929     -4.658559      -4.62315     -4.707965     -4.581752"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "design_thing = BayesianAdaptiveDesignGeneratorDARC(max_trials=20, \n",
-    "                          RA=list(np.arange(5, 99+1, 1)), \n",
-    "                          DB=list(np.arange(1, 365, 7)))\n",
+    "D = DesignSpaceBuilder(RA=list(np.arange(5, 99+1, 1)), \n",
+    "                       DB=list(np.arange(1, 365, 7))).build()\n",
+    "design_thing = BayesianAdaptiveDesignGeneratorDARC(D, max_trials=20)\n",
     "\n",
     "# create a response model with some true parameters\n",
     "model_to_fit = models.Hyperbolic(n_particles=5000)\n",
@@ -154,13 +151,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/btvincent/git-local/darc-experiments-python/bad/optimisation.py:153: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  (n_times_sampled+n_times_sampled_iter))\n",
+      "/Users/btvincent/git-local/darc-experiments-python/bad/optimisation.py:226: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  (n_times_sampled + n_times_sampled_iter))\n",
+      "/Users/btvincent/git-local/darc-experiments-python/darc/delayed/models.py:97: RuntimeWarning: overflow encountered in multiply\n",
+      "  VB = data['RB'].values * self._time_discount_func(data['DB'].values, θ['k'].values)\n",
+      "/Users/btvincent/git-local/darc-experiments-python/bad/choice_functions.py:22: RuntimeWarning: overflow encountered in true_divide\n",
+      "  p_chose_B = θ_fixed['ϵ'] + (1 - 2 * θ_fixed['ϵ']) * _Phi(np.divide(decision_variable, α))\n"
+     ]
+    }
+   ],
    "source": [
-    "design_thing = BayesianAdaptiveDesignGeneratorDARC(max_trials=20, \n",
-    "                          RA=list(np.arange(5, 99+1, 1)), \n",
-    "                          DB=list(np.arange(1, 365, 7)))\n",
+    "D = DesignSpaceBuilder(RA=list(np.arange(5, 99+1, 1)), \n",
+    "                       DB=list(np.arange(1, 365, 7))).build()\n",
+    "design_thing = BayesianAdaptiveDesignGeneratorDARC(D, max_trials=20)\n",
     "\n",
     "# create a response model with some true parameters\n",
     "response_model = models.Hyperbolic(n_particles=5000)\n",
@@ -177,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -213,13 +225,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-6.026244</td>\n",
-       "      <td>0.004534</td>\n",
-       "      <td>0.004814</td>\n",
-       "      <td>0.004534</td>\n",
-       "      <td>0.004534</td>\n",
-       "      <td>0.004534</td>\n",
-       "      <td>0.006033</td>\n",
+       "      <td>-7.376877</td>\n",
+       "      <td>0.005491</td>\n",
+       "      <td>0.005432</td>\n",
+       "      <td>0.005491</td>\n",
+       "      <td>0.005491</td>\n",
+       "      <td>0.005091</td>\n",
+       "      <td>0.005491</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -227,10 +239,10 @@
       ],
       "text/plain": [
        "   k_entropy  k_median    k_mean  k_lower50  k_upper50  k_lower95  k_upper95\n",
-       "0  -6.026244  0.004534  0.004814   0.004534   0.004534   0.004534   0.006033"
+       "0  -7.376877  0.005491  0.005432   0.005491   0.005491   0.005091   0.005491"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
