--- a/dev/ITCH.ipynb
+++ b/dev/ITCH.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "Ericson et al (2015) claim that these 'heuristic' (i.e. attribute-wise) models fit human data better than alternative-wise models. One reason this is a big deal is because the alternative-wise models (such as hyperbolic discounting) predict we are transitive in our preferences. Whereas attribute-wise models should allow intransitive preference orderings to be made. In terms of whether people have transitive vs instransitive preferences for inter-temporal choice, I would say the jury is still out - there is mixed evidence.\n",
     "\n",
-    "The core claim of Ericson et al (2015) about the superiority of the attribute wise models was critically undermined by sub-optimal methods of comparing model fits (see Wulff & van den Bos, 2017). Nevertheless, it remains vital for the community to throughly evaluate these heuristic, attribute-wise models."
+    "The core claim of Ericson et al (2015) about the superiority of the attribute wise models was critically undermined by sub-optimal methods of comparing model fits (see Wulff & van den Bos, 2017). Nevertheless, it remains vital for the community to thoroughly evaluate these heuristic, attribute-wise models."
    ]
   },
   {
