#75 adding citations re DRIFT model

--- a/dev/DRIFT.ipynb
+++ b/dev/DRIFT.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Exploring the DRIFT model \n",
     "\n",
-    "The decision rule is:\n",
+    "The DRIFT model was proposed by Read, Fredereick, & Scholten (2012). The decision rule (as presented in Ericson et al, 2015) is:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -591,11 +591,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Ericson, K. M. M., White, J. M., Laibson, D., & Cohen, J. D. (2015). Money earlier or later? Simple heuristics explain intertemporal choices better than delay discounting does. Psychological Science, 26(6), 826–833. http://doi.org/10.1177/0956797615572232\n",
+    "\n",
+    "Read, D., Frederick, S., & Scholten, M. (2013). DRIFT: an analysis of outcome framing in intertemporal choice. Journal of Experimental Psychology: Learning, Memory, and Cognition, 39(2), 573–588. http://doi.org/10.1037/a0029177"
+   ]
   }
  ],
  "metadata": {
