move parameter_recovery.py into darc

--- a/dev/DRIFT.ipynb
+++ b/dev/DRIFT.ipynb
@@ -65,7 +65,7 @@
     "import darc\n",
     "from darc.delayed import models\n",
     "from darc.designs import BayesianAdaptiveDesignGeneratorDARC, DesignSpaceBuilder\n",
-    "from dev.darc_parameter_recovery import simulated_experiment_trial_loop\n",
+    "from darc.parameter_recovery import simulated_experiment_trial_loop\n",
     "from darc.data_plotting import data_plotter\n",
     "\n",
     "import bad.triplot"
