--- a/dev/posterior_prediction_test.ipynb
+++ b/dev/posterior_prediction_test.ipynb
@@ -137,7 +137,7 @@
     "from darc.delayed import models\n",
     "from darc.designs import BayesianAdaptiveDesignGeneratorDARC, DesignSpaceBuilder\n",
     "from darc.data_plotting import plot_delay_without_front_end_delays\n",
-    "from darc_parameter_recovery import simulated_experiment_trial_loop"
+    "from darc.parameter_recovery import simulated_experiment_trial_loop"
    ]
   },
   {
@@ -514,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
