--- a/dev/risky choice test.ipynb
+++ b/dev/risky choice test.ipynb
@@ -35,7 +35,7 @@
     "from darc.delayed.designs import Griskevicius2011, Frye, Koffarnus_Bickel, Kirby2009\n",
     "\n",
     "from darc.data_plotting import plot_delay_without_front_end_delays\n",
-    "from darc_parameter_recovery import simulated_experiment_trial_loop\n",
+    "from darc.parameter_recovery import simulated_experiment_trial_loop\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%config InlineBackend.figure_format = 'retina'"
@@ -1048,7 +1048,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
